Fixes z-index on site header.

--- a/src/scss/global/_header.scss
+++ b/src/scss/global/_header.scss
@@ -10,6 +10,7 @@
   inset-block-start: 0;
   padding-inline: var(--spacer-small);
   position: sticky;
+  z-index: 1;
 }
 
 .site-header__inner {
